--- a/package.json
+++ b/package.json
@@ -11,10 +11,17 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "graceful-fs": "^4.1.11",
+    "gulp": "^3.9.1",
+    "gulp-live-server": "0.0.31",
     "jasmine-node": "^1.14.5",
+    "minimatch": "^3.0.4",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
     "pug": "~2.0.0-beta11",
     "serve-favicon": "~2.4.2"
+  },
+  "devDependencies": {
+    "jshint": "^2.9.5"
   }
 }
