--- a/package.json
+++ b/package.json
@@ -19,11 +19,9 @@
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
     "pug": "~2.0.0-beta11",
-    "serve-favicon": "~2.4.2",
-    "susy": "^3.0.1"
+    "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
-    "eyeglass": "^1.3.0",
     "jshint": "^2.9.5"
   }
 }
