--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
   },
   "dependencies": {
     "body-parser": "~1.17.1",
+    "bootstrap": "^4.0.0-beta.2",
     "cookie-parser": "~1.4.3",
     "express": "~4.15.2",
+    "jquery": "^3.2.1",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
+    "popper.js": "^1.12.9",
     "pug": "^2.0.0-rc.4",
     "serve-favicon": "~2.4.2"
   },
