--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.2.1",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
+    "pg-promise": "^7.3.2",
     "popper.js": "^1.13.0",
     "pug": "^2.0.0-rc.4",
     "serve-favicon": "~2.4.2"
