--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "body-parser": "~1.17.1",
     "bootstrap": "^4.0.0-beta.2",
     "cookie-parser": "~1.4.3",
+    "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "jquery": "^3.2.1",
     "morgan": "~1.8.1",
