--- a/package.json
+++ b/package.json
@@ -7,14 +7,19 @@
     "test": "node_modules/.bin/jasmine-node spec"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "~1.17.1",
     "bootstrap": "^4.0.0-beta.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
+    "express-session": "^1.15.6",
     "jquery": "^3.2.1",
     "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "pg-promise": "^7.3.2",
     "popper.js": "^1.13.0",
     "pug": "^2.0.0-rc.4",
