--- a/package.json
+++ b/package.json
@@ -11,12 +11,10 @@
     "body-parser": "~1.17.1",
     "bootstrap": "^4.0.0-beta.2",
     "connect-flash": "^0.1.1",
-    "cookie-parser": "~1.4.3",
+    "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
-    "express-session": "^1.15.6",
     "jquery": "^3.2.1",
-    "morgan": "~1.8.1",
     "node-sass-middleware": "0.9.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
