--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.17.1",
     "bootstrap": "^4.0.0-beta.2",
+    "chai": "^4.1.2",
     "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "jquery": "^3.2.1",
+    "mocha": "^4.0.1",
     "node-sass-middleware": "0.9.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
