--- a/package.json
+++ b/package.json
@@ -4,19 +4,17 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "test": "mocha"
+    "test": "mocha --exit"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.17.1",
     "bootstrap": "^4.0.0-beta.2",
-    "chai": "^4.1.2",
     "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "jquery": "^3.2.1",
-    "mocha": "^4.0.1",
     "node-sass-middleware": "0.9.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -26,6 +24,8 @@
     "serve-favicon": "~2.4.2"
   },
   "devDependencies": {
+    "chai": "^4.1.2",
+    "chai-http": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-jscs": "^4.0.0",
     "gulp-jshint": "^2.0.4",
@@ -35,6 +35,7 @@
     "jscs": "^3.0.7",
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
+    "mocha": "^4.0.1",
     "run-sequence": "^2.2.0",
     "tiny-lr": "^1.0.5"
   }
