--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-PORT = 4444
-DB_HOST = localhost
-DB_NAME = fullfeaturex
-DB_PORT = 5432
-SECRET_KEY = secret
+NODE_ENV=development
+DB_HOST=localhost
+DB_NAME=fullfeaturex
+DB_PORT=5432
+PORT=4444
+SECRET_KEY=BCNOgAaubBPKap5idTShaUiz2QlZX3IHk01eTNDu2+A=
