--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
-node_modules/*
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+*.swp
+
+pids
+logs
+results
+tmp
+
+node_modules
+
+.idea
+*.iml
+
 .DS_Store
+Thumbs.db
