--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
     "jquery": "^3.2.1",
+    "knex": "^0.14.2",
     "node-sass-middleware": "0.9.8",
+    "objection": "^0.9.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "pg-promise": "^7.3.2",
+    "pg": "^7.4.1",
     "popper.js": "^1.13.0",
     "pug": "^2.0.0-rc.4",
     "serve-favicon": "~2.4.2"
