--- a/.env-sample
+++ b/.env-sample
@@ -1,6 +1,6 @@
 NODE_ENV=development
 DB_HOST=localhost
-DB_NAME=ffx
+DB_NAME=fullfeaturex
 DB_PORT=5432
 PORT=4444
 SECRET_KEY=BCNOgAaubBPKap5idTShaUiz2QlZX3IHk01eTNDu2+A=
