--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
     "express": "~4.15.2",
+    "faker": "^4.1.0",
     "jquery": "^3.2.1",
     "knex": "^0.14.2",
     "node-sass-middleware": "0.9.8",
