--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "~1.17.1",
-    "bootstrap": "^4.0.0-beta.3",
+    "bootstrap": "^4.0.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0-beta.3",
     "dotenv": "^4.0.0",
@@ -39,6 +39,8 @@
     "jshint": "^2.9.5",
     "jshint-stylish": "^2.2.1",
     "mocha": "^4.1.0",
+    "mocha-jscs": "^5.0.1",
+    "mocha-jshint": "^2.3.1",
     "run-sequence": "^2.2.1",
     "tiny-lr": "^1.0.5"
   }
