--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "git-hooks": "^1.1.9",
     "gulp": "^3.9.1",
     "gulp-jscs": "^4.1.0",
     "gulp-jshint": "^2.1.0",
