--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mocha": "^4.1.0",
     "mocha-jscs": "^5.0.1",
     "mocha-jshint": "^2.3.1",
+    "nyc": "^11.4.1",
     "run-sequence": "^2.2.1",
     "tiny-lr": "^1.0.5"
   }
