--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./src/server/server.js",
-    "test": "NODE_ENV=test mocha --exit"
+    "test": "NODE_ENV=test nyc mocha --exit"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
