--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "pg": "^7.4.1",
     "popper.js": "^1.13.0",
     "pug": "^2.0.0-rc.4",
-    "serve-favicon": "~2.4.2"
+    "serve-favicon": "~2.4.2",
+    "validate.js": "^0.12.0"
   },
   "devDependencies": {
     "chai": "^4.1.2",
