--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^3.0.0",
+    "eslint": "^4.16.0",
+    "eslint-config-standard": "^11.0.0-beta.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-node": "^5.2.1",
+    "eslint-plugin-promise": "^3.6.0",
+    "eslint-plugin-standard": "^3.0.1",
     "git-hooks": "^1.1.9",
     "gulp": "^3.9.1",
     "gulp-nodemon": "^2.2.1",
