--- a/package.json
+++ b/package.json
@@ -37,9 +37,11 @@
     "eslint-plugin-standard": "^3.0.1",
     "git-hooks": "^1.1.9",
     "gulp": "^3.9.1",
+    "gulp-eslint": "^4.0.2",
     "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "^1.2.0",
     "mocha": "^4.1.0",
+    "mocha-eslint": "^4.1.0",
     "nyc": "^11.4.1",
     "run-sequence": "^2.2.1",
     "tiny-lr": "^1.0.5"
