--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "fullfeaturex",
   "version": "0.1.0",
+  "license": "SEE LICENSE IN LICENSE",
   "private": true,
   "scripts": {
     "start": "node ./src/server/server.js",
@@ -8,16 +9,16 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "body-parser": "~1.17.1",
+    "body-parser": "^1.18.2",
     "bootstrap": "^4.0.0",
     "connect-flash": "^0.1.1",
     "cookie-session": "^2.0.0-beta.3",
-    "dotenv": "^4.0.0",
-    "express": "~4.15.2",
+    "dotenv": "^5.0.0",
+    "express": "^4.16.2",
     "faker": "^4.1.0",
-    "jquery": "^3.2.1",
+    "jquery": "^3.3.1",
     "knex": "^0.14.2",
-    "node-sass-middleware": "0.9.8",
+    "node-sass-middleware": "^0.11.0",
     "objection": "^0.9.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
@@ -40,10 +41,10 @@
     "gulp-eslint": "^4.0.2",
     "gulp-nodemon": "^2.2.1",
     "gulp-plumber": "^1.2.0",
-    "mocha": "^4.1.0",
+    "mocha": "^5.0.0",
     "mocha-eslint": "^4.1.0",
     "nyc": "^11.4.1",
     "run-sequence": "^2.2.1",
-    "tiny-lr": "^1.0.5"
+    "tiny-lr": "^1.1.0"
   }
 }
