--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "objection": "^0.9.4",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport-stub": "^1.1.1",
     "pg": "^7.4.1",
     "popper.js": "^1.13.0",
     "pug": "^2.0.0-rc.4",
